sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:11: error: '<-' expected but ')' found.
     for(i<fin to debut by -1)
                             ^AlgCocktailSort2:31: error: illegal start of simple expression
}
^